package.json modfied

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plasticscafe env"
+  "name": "plasticscafe-env"
   ,"version": "0.0.1"
   ,"engines": { "node": "" }
   ,"author": "plasticscafe"
